# pixelreplace-v1

./: .gitignore  Cargo.toml  HOW_IT_WORKS.md  LICENSE  README.md  flake.nix  index.html  obamify-b2cc642f9e92f909.js  worker.js
.github/workflows/: cf_pages.yml  release.yaml  rust.yml
assets/: manifest.json  sw.js
assets/macos/: icon.icns
presets/blackhole/: assignments.json
presets/cat/: assignments.json
presets/cat2/: assignments.json
presets/colorful/: assignments.json
presets/wisetree/: assignments.json
src/: app.rs  lib.rs  main.rs
src/app/: gif_recorder.rs  gui.rs  morph_sim.rs  preset.rs
src/app/calculate/: drawing_process.rs  mod.rs  util.rs
src/app/calculate/worker/: mod.rs
src/shaders/: clear.wgsl  jfa.wgsl  seed.wgsl  shade.wgsl
